Correctly align radio buttons with their labels
We were using a `height: $line-height` property for this task. One of
the disadvantages of this approach is that things don't look so great
when the label expands over more than one line.

Back when we added that property, browser support for flex layouts
wasn't that great. Now there's universal support for it, so we can use
it instead.

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -168,6 +168,10 @@ $table-header:   #ecf1f6;
       font-weight: bold;
     }
 
+    .radio {
+      @include radio-or-checkbox-and-label-alignment;
+    }
+
     select {
       height: $input-height;
     }
