--- a/app/assets/stylesheets/admin/legislation/draft_versions/form.scss
+++ b/app/assets/stylesheets/admin/legislation/draft_versions/form.scss
@@ -85,4 +85,12 @@
       }
     }
   }
+
+  .radio-and-label {
+    @include radio-or-checkbox-and-label-alignment;
+
+    span {
+      margin-left: 1ch;
+    }
+  }
 }
