--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -909,7 +909,6 @@ form {
   }
 
   [type="radio"] {
-    height: $line-height !important;
     vertical-align: top;
 
     + label {
